<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lender_navigation"
    app:startDestination="@+id/navigation_lend_home">

    <fragment
        android:id="@+id/navigation_lend_home"
        android:name="com.timilehinaregbesola.kredit.ui.lenderhome.LenderHomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_lender_home" >
    </fragment>

    <fragment
        android:id="@+id/navigation_lend_stats"
        android:name="com.timilehinaregbesola.kredit.ui.lenderstats.LenderStatsFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_lender_stats" >
    </fragment>

    <fragment
        android:id="@+id/navigation_lend_cards"
        android:name="com.timilehinaregbesola.kredit.ui.cards.CardsFragment"
        android:label="@string/title_cards"
        tools:layout="@layout/fragment_cards" />

    <fragment
        android:id="@+id/navigation_lend_profile"
        android:name="com.timilehinaregbesola.kredit.ui.lenderprofile.LenderProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_lender_profile" />
</navigation>